# app-analytics

./: Cargo.toml  README.md  run.sh
dotnet-sdk/: HttpLogger.csproj  HttpLoggerContext.cs  HttpLoggerExtensions.cs  HttpLoggerHandler.cs  HttpLoggerLog.cs  HttpLoggerMiddleware.cs  LogEntry.cs  LogSender.cs  dotnet-sdk.sln
ingestion-api/: Cargo.toml
ingestion-api/src/: main.rs
instrumentation/: Instrumentation.csproj  Instrumentation.http  Program.cs  instrumentation.sln
instrumentation/Controllers/: ExternalController.cs  HelloController.cs
instrumentation/HttpLogger/: HttpLogger.csproj  HttpLoggerExtensions.cs  HttpLoggerHandler.cs  HttpLoggerMiddleware.cs  LogEntry.cs  LogSender.cs
instrumentation/Properties/: launchSettings.json
processor/: Cargo.toml
processor/src/: main.rs
specs/: dotnet-instrumentation.md
src/: main.rs
